--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.22.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
