--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "chart.js": "^4.4.6",
     "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.15.0",
+    "install": "^0.13.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
